changed fonts from default to google fonts; changed navbar styles to conform to IIITD graphic identity; made logo clickable; added instagram link; changed icons for twitter and instagram to lineicons css icons

--- a/index.html
+++ b/index.html
@@ -7,13 +7,18 @@
         <meta name="keywords" content="Debajyoti Bera, quantum computing, IIITD, quantum complexity">
         <meta name="viewport" content="width-device-width, initial-scale=1.0">
         <link rel="stylesheet" href="mystyle.css">
+        <link href="https://cdn.lineicons.com/3.0/lineicons.css" rel="stylesheet">
+        <link rel="icon" href="braqiiit.png" type="image/icon type">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700&family=Work+Sans:ital,wght@0,100;0,300;0,400;0,500;0,600;0,700;1,100;1,300&display=swap" rel="stylesheet">
     </head>
     <body>
         <div class="nav-wrapper">
             <nav>
                 <div class="nav-container">
                     <div class="nav-holder">
-                        <img src="braqiiit.png" alt="BraQIIIT Logo">
+                        <a href="#home" title="Home"><img src="braqiiit.png" alt="BraQIIIT Logo"></a>
                         <ul>
                             <li><a href="#home" title="Home">Home</a></li>
                             <li><a href="#about" title="About Us">About Us</a></li>
@@ -161,7 +166,8 @@
                             Research and Development Block, <br>
                             Indraprastha Institute of Technology - Delhi, <br>
                             Okhla Industrial Area Phase III, <br>
-                            New Delhi, India - 110020
+                            New Delhi, India - 110020<br>
+                            Email:<a href = "mailto: braqiiit@gmail.com">braqiiit@gmail.com</a>
                         </p>
                     </div>
                 </div>
@@ -170,7 +176,10 @@
         <hr width="=85%">
         <footer class="center">
             <a href="https://twitter.com/bqiiit" target="_blank">
-                <img src="twittericon.png" alt="Twitter">
+                <i class="lni lni-twitter-filled"></i>
+            </a>
+            <a href="https://www.instagram.com/braqiiit"  target="_blank">
+                <i class="lni lni-instagram-filled"></i>
             </a>
             <br>
             <br>
