added titlebar icon

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <meta name="viewport" content="width-device-width, initial-scale=1.0">
         <link rel="stylesheet" href="mystyle.css">
         <link href="https://cdn.lineicons.com/3.0/lineicons.css" rel="stylesheet">
+        <!-- adding titlebar icon -->
         <link rel="icon" href="braqiiit.png" type="image/icon type">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
