Few modificaitions to the small screen menu

--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
                 </div>
                 <nav>
                     <ul>
-                        <li><a href="#home" title="Home">Home</a></li>
-                        <li><a href="#research" title="Research">Research</a></li>
-                        <li><a href="#people" title="People">People</a></li>
-                        <li><a href="#publications" title="Publications">Publications</a></li>
-                        <li><a href="#contact" title="Contact">Contact</a></li>
+                        <li class="nav-item"><a href="#home" title="Home">Home</a></li>
+                        <li class="nav-item"><a href="#research" title="Research">Research</a></li>
+                        <li class="nav-item"><a href="#people" title="People">People</a></li>
+                        <li class="nav-item"><a href="#publications" title="Publications">Publications</a></li>
+                        <li class="nav-item"><a href="#contact" title="Contact">Contact</a></li>
                     </ul>
                 </nav>
             </div>
@@ -152,13 +152,16 @@
                 <h2 class="box-center center sec-heading">Recent Publications</h2>
                 <div class="pub-list">
                     <ul>
-                        <li>S. Dawar, D. Bera, V. Goyal. SMIM framework to generalize high-utility itemset mining. ADMA 2021.</li>
-                        <li>D. Bera, R. Pratap, B.D. Verma, B. Sen, & T. Chakraborty. QUINT: Node embedding using network hashing. IEEE Transactions on Knowledge and Data Engineering (2021).</li>
                         <li>D. Bera, and Tharrmashastha SAPV. Space efficient quantum algorithms for mode, min-entropy and k-distinctness. arXiv preprint. <a href="https://arxiv.org/abs/2103.09033">arXiv:2103.09033</a>(2021).</li>
                         <li>D. Bera and Tharrmashastha SAPV. Quantum and Randomised Algorithms for Non-linearity Estimation. ACM Transactions on Quantum Computing (2021).</li>
                         <li>D. Bera and S. Chatterjee. Applying the Quantum Alternating OPerator Ansatz to the Graph Matching Problem. AQIS 2020.</li>
-                        <li>Jolly, B. L. Kaur, L. Jain, D. Bera, and T. Chakraborty. Unsupervised anomaly detection in journal-level citation networks. In Proceedings of the ACM/IEEE Joint Conference on Digital Libraries (2020).</li>
-                        <li>D. Bera. Maximal Labeled-Cliques for Structural-Functional Communities. In International Conference on Complex Networks and Their Applications (2020).</li>
+                        <li>D. Bera and Tharrmashastha SAPV. Error reduction of quantum algorithms. Physical Review A 100.012331 (2019).</li>
+                        <li>D. Bera, S. Maitra, and Tharrmashastha SAPV. Efficient quantum algorithms related to autocorrelation spectrum. In International Conference on Cryptology in India (2019).</li>
+                        <li>D. Bera. Amplitude amplification for operator identification and randomized classes. In International Computing and Combinatorics Conference (COCOON 2018).</li>
+                        <li>D. Bera. Detection and Diagnosis of Single Faults in Quantum Circuits. In IEEE Transactions on Computer-Aided Design of Integrated Circuits and Systems, vol. 37, no. 3. (2018)</li>
+                        <ul>
+                            <li><i>Preliminary Version.</i> D. Bera, S. Maitra, S. Roychowdhury, and S. Chakraborty. "Diagnosis of single faults in quantum circuits." arXiv preprint <a href="https://arxiv.org/abs/1512.05051">arXiv:1512.05051</a> (2015).</li>
+                        </ul>
                     </ul>
                 </div>
             </div>
