--- a/index.html
+++ b/index.html
@@ -13,9 +13,20 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700&family=Work+Sans:ital,wght@0,100;0,300;0,400;0,500;0,600;0,700;1,100;1,300&display=swap" rel="stylesheet">
+        <link href='https://fonts.googleapis.com/css?family=Akaya Kanadaka' rel='stylesheet'>
     </head>
     <body>
-        <div class="nav-wrapper">
+        <div class="name-container">
+            <div class="progress">
+                <h1>
+                    BraQIIIT
+                </h1>
+            </div>
+        </div>
+        <div class="progress">
+            <img src="under_construction.png" alt="Site under construction image">
+        </div>
+        <!-- <div class="nav-wrapper">
             <div class="nav-container">
                 <div class="nav-img-holder">
                     <a href="#home" title="Home"><img src="braqiiit.png" alt="BraQIIIT Logo"></a>
@@ -198,7 +209,7 @@
                 Copyright &copy; <em id="date"></em>BraQIIIT 2021. All rights reserved.
             </div>
             <br>
-        </footer>
+        </footer> -->
         <script src="main.js"></script>
     </body>
 </html>
