--- a/index.html
+++ b/index.html
@@ -1,215 +1,171 @@
-<!DOCTYPE html>
-<html lang="en">
-    <head>
-        <title>BraQIIIT - The Quantum Lab of IIIT-D</title>
-        <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-        <meta name="description" content="BraQIIIT is the quantum lab at IIIT-Delhi lef by Dr.Debayoti Bera.">
-        <meta name="keywords" content="Debajyoti Bera, quantum computing, IIITD, quantum complexity">
-        <meta name="viewport" content="width-device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="mystyle.css">
-        <link href="https://cdn.lineicons.com/3.0/lineicons.css" rel="stylesheet">
-        <!-- adding titlebar icon -->
-        <link rel="icon" href="braqiiit.png" type="image/icon type">
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700&family=Work+Sans:ital,wght@0,100;0,300;0,400;0,500;0,600;0,700;1,100;1,300&display=swap" rel="stylesheet">
-        <link href='https://fonts.googleapis.com/css?family=Akaya Kanadaka' rel='stylesheet'>
-    </head>
-    <body>
-        <div class="name-container">
-            <div class="progress">
-                <h1>
-                    BraQIIIT
-                </h1>
-            </div>
-        </div>
-        <div class="progress">
-            <img src="under_construction.png" alt="Site under construction image">
-        </div>
-        <!-- <div class="nav-wrapper">
-            <div class="nav-container">
-                <div class="nav-img-holder">
-                    <a href="#home" title="Home"><img src="braqiiit.png" alt="BraQIIIT Logo"></a>
-                    <div class="nav-toggle" id="navToggle">
-                        <img class="navIcon" id="hb-menu" src="hb-menu.svg" alt="Hamburger Menu">
-                        <img class="navIcon hidden" src="cross.svg" alt="Close Menu">
-                    </div>
-                </div>
-                <nav>
-                    <ul>
-                        <li class="nav-item"><a href="#home" title="Home">Home</a></li>
-                        <li class="nav-item"><a href="#research" title="Research">Research</a></li>
-                        <li class="nav-item"><a href="#people" title="People">People</a></li>
-                        <li class="nav-item"><a href="#publications" title="Publications">Publications</a></li>
-                        <li class="nav-item"><a href="#contact" title="Contact">Contact</a></li>
-                    </ul>
-                </nav>
-            </div>
-        </div>
-        <div class="home" id="home">
-            <div>
-                <h1 class="top-heading box-center center">
-                    BraQIIIT
-                </h1>
-                <p class="center box-center">
-                    This is two lines about our lab and its aims and stuff.
-                </p>
-            </div>
-        </div>
-        <hr width="85%">
-        <div id="research" class="research">
-            <h2 class="box-center center sec-heading">Research</h2>
-            <p class="box-center">
-                This is a para in the research division.
-            </p>
-        </div>
-        <hr width="85%">
-        <div class="sec-container box-center">
-            <div class="people" id="people">
-                <h2 class="box-center center sec-heading">People</h2>
-                <div class="row">
-                    <h3 class="sec-people">Advisor</h3>
-                    <div class="row">
-                        <div class="column1 center box-center">
-                            <img src="dbera.png" alt="placeholder">
-                            <div class="name-card">
-                                <p>Debajyoti Bera</p>
-                            </div>
-                        </div>
-                    </div>
-                    <h3 class="sec-people">Doctoral Students</h3>
-                    <div class="row">
-                        <div class="column2 center box-center">
-                            <img src="sagnik.png" alt="placeholder">
-                            <div class="name-card">
-                                <p>Sagnik Chatterjee</p>
-                            </div>
-                        </div>
-                        <div class="column2 center box-center">
-                            <img src="tharrma.jpg" alt="placeholder">
-                            <div class="name-card">
-                                <p>Tharrmashastha SAPV</p>
-                            </div>
-                        </div>
-                    </div>
-                    <h3 class="sec-people">Graduate Students</h3>
-                    <div class="row">
-                        <div class="column3 center box-center">
-                            <img src="placeholder.png" alt="placeholder">
-                            <div class="name-card">
-                                <p>Student Name</p>
-                            </div>
-                        </div>
-                        <div class="column3 center box-center">
-                            <img src="placeholder.png" alt="placeholder">
-                            <div class="name-card">
-                                <p>Student Name</p>
-                            </div>
-                        </div>
-                        <div class="column3 center box-center">
-                            <img src="placeholder.png" alt="placeholder">
-                            <div class="name-card">
-                                <p>Student Name</p>
-                            </div>
-                        </div>
-                    </div>
-                    <h3 class="sec-people">Undergraduate Students</h3>
-                    <div class="row">
-                        <div class="column3 center">
-                            <img src="placeholder.png" alt="placeholder">
-                            <div class="name-card">
-                                <p>Student Name</p>
-                            </div>
-                        </div>
-                        <div class="column3 center">
-                            <img src="placeholder.png" alt="placeholder">
-                            <div class="name-card">
-                                <p>Student Name</p>
-                            </div>
-                        </div>
-                        <div class="column3 center">
-                            <img src="placeholder.png" alt="placeholder">
-                            <div class="name-card">
-                                <p>Student Name</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="column3 center">
-                            <img src="placeholder.png" alt="placeholder">
-                            <div class="name-card">
-                                <p>Student Name</p>
-                            </div>
-                        </div>
-                        <div class="column3 center">
-                            <img src="placeholder.png" alt="placeholder">
-                            <div class="name-card">
-                                <p>Student Name</p>
-                            </div>
-                        </div>
-                        <div class="column3 center">
-                            <img src="placeholder.png" alt="placeholder">
-                            <div class="name-card">
-                                <p>Student Name</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <hr width="85%">
-        <div class="sec-container box-center">
-            <div class="publications" id="publications">
-                <h2 class="box-center center sec-heading">Recent Publications</h2>
-                <div class="pub-list">
-                    <ul>
-                        <li>D. Bera, and Tharrmashastha SAPV. Space efficient quantum algorithms for mode, min-entropy and k-distinctness. arXiv preprint. <a href="https://arxiv.org/abs/2103.09033">arXiv:2103.09033</a>(2021).</li>
-                        <li>D. Bera and Tharrmashastha SAPV. Quantum and Randomised Algorithms for Non-linearity Estimation. ACM Transactions on Quantum Computing (2021).</li>
-                        <li>D. Bera and S. Chatterjee. Applying the Quantum Alternating OPerator Ansatz to the Graph Matching Problem. AQIS 2020.</li>
-                        <li>D. Bera and Tharrmashastha SAPV. Error reduction of quantum algorithms. Physical Review A 100.012331 (2019).</li>
-                        <li>D. Bera, S. Maitra, and Tharrmashastha SAPV. Efficient quantum algorithms related to autocorrelation spectrum. In International Conference on Cryptology in India (2019).</li>
-                        <li>D. Bera. Amplitude amplification for operator identification and randomized classes. In International Computing and Combinatorics Conference (COCOON 2018).</li>
-                        <li>D. Bera. Detection and Diagnosis of Single Faults in Quantum Circuits. In IEEE Transactions on Computer-Aided Design of Integrated Circuits and Systems, vol. 37, no. 3. (2018)</li>
-                        <ul>
-                            <li><i>Preliminary Version.</i> D. Bera, S. Maitra, S. Roychowdhury, and S. Chakraborty. "Diagnosis of single faults in quantum circuits." arXiv preprint <a href="https://arxiv.org/abs/1512.05051">arXiv:1512.05051</a> (2015).</li>
-                        </ul>
-                    </ul>
-                </div>
-            </div>
-        </div>
-        <hr width="85%">
-        <div class="sec-container box-center">
-            <div class="contact" id="contact">
-                <h2 class="box-center center sec-heading">Contact Us</h2>
-                <div class="add-container">
-                    <div class="address">
-                        <p>
-                            Lab B-513, <br>
-                            Research and Development Block, <br>
-                            Indraprastha Institute of Technology - Delhi, <br>
-                            Okhla Industrial Area Phase III, <br>
-                            New Delhi, India - 110020<br>
-                            Email:<a href = "mailto: braqiiit@gmail.com">braqiiit@gmail.com</a>
-                        </p>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <hr width="=85%">
-        <footer class="center">
-            <a href="https://twitter.com/bqiiit" target="_blank">
-                <i class="lni lni-twitter-filled"></i>
-            </a>
-            <a href="https://www.instagram.com/braqiiit"  target="_blank">
-                <i class="lni lni-instagram-filled"></i>
-            </a>
-            <br>
-            <br>
-            <div class="copyright">
-                Copyright &copy; <em id="date"></em>BraQIIIT 2021. All rights reserved.
-            </div>
-            <br>
-        </footer> -->
-        <script src="main.js"></script>
-    </body>
+<!DOCTYPE HTML>
+<html>
+	<head>
+		<title>BraQIIITD - The Quantum Lab at IIIT-D</title>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<link rel="stylesheet" href="assets/css/main.css" />
+        <link rel="icon" href="images/braqiiit.png" type="image/icon type">
+	</head>
+	<body class="is-preload">
+
+		<!-- Nav -->
+			<nav id="nav">
+				<ul class="container">
+					<li><a href="#top">Home</a></li>
+					<li><a href="#team">Team</a></li>
+					<li><a href="#publications">Publications</a></li>
+					<li><a href="#contact">Contact</a></li>
+				</ul>
+			</nav>
+
+		<!-- Home -->
+			<article id="top" class="wrapper style1">
+				<div class="container">
+					<div class="row">
+						<div class="col-4 col-5-large col-12-medium">
+							<span class="image fit"><img src="images/braqiiit.png" alt="" /></span>
+						</div>
+						<div class="col-8 col-7-large col-12-medium">
+							<header>
+								<h1>BraQIIIT</h1>
+							</header>
+							<p>The Quantum Lab at IIIT-D.</p>
+							<p>BraQIIIT is a research group led by Dr. Debajyoti Bera at Indraprastha Institute of Information Technology, Delhi (IIIT-Delhi). Broad research interests of this group include quantum query complexity, quantum circuit complexity, and quantum algorithms for cryptography, machine learning and optimization.</p>
+						</div>
+					</div>
+				</div>
+			</article>
+
+		<!-- Team -->
+			<article id="team" class="wrapper style2">
+				<div class="container">
+					<header>
+						<h2>Our Team</h2>
+					</header>
+					<h2>Advisor</h2>
+					<div class="row aln-center">
+						<div class="col-4 col-6-medium col-12-small">
+							<section class="box style1">
+								<span class="image fit"><a href="http://faculty.iiitd.ac.in/~dbera/"><img src="images/dbera.png" alt="" /></a></span>
+								<h3>Debajyoti Bera</h3>
+							</section>
+						</div>
+					</div>
+					<h2>Doctoral Students</h2>
+					<div class="row aln-center">
+						<div class="col-4 col-6-medium col-12-small">
+							<section class="box style1">
+								<span class="image fit"><a href="http://chatsagnik.com/"><img src="images/sagnik.png" alt="" /></a></span>
+								<h3>Sagnik Chatterjee</h3>
+							</section>
+						</div>
+						<div class="col-4 col-6-medium col-12-small">
+							<section class="box style1">
+								<span class="image fit"><a href="https://sites.google.com/iiitd.ac.in/
+									tharrma"><img src="images/tharrma.jpg" alt="" /></a></span>
+								<h3>Tharrmashastha SAPV</h3>
+							</section>
+						</div>
+					</div>
+				</div>
+			</article>
+
+		<!-- Publications -->
+			<article id="publications" class="wrapper style3">
+				<div class="container">
+					<header>
+						<h2>Publications</h2>
+					</header>
+					<div class="row">
+						<ul class="papers">
+							<li>D. Bera, and Tharrmashastha SAPV. Space efficient quantum algorithms for mode, min-entropy and k-distinctness. arXiv preprint. <a href="https://arxiv.org/abs/2103.09033">arXiv:2103.09033</a>(2021).</li>
+							<li>D. Bera and Tharrmashastha SAPV. Quantum and Randomised Algorithms for Non-linearity Estimation. ACM Transactions on Quantum Computing (2021).</li>
+							<li>D. Bera and S. Chatterjee. Applying the Quantum Alternating Operator Ansatz to the Graph Matching Problem. AQIS 2020.</li>
+							<li>D. Bera and Tharrmashastha SAPV. Error reduction of quantum algorithms. Physical Review A 100.012331 (2019).</li>
+							<li>D. Bera, S. Maitra, and Tharrmashastha SAPV. Efficient quantum algorithms related to autocorrelation spectrum. In International Conference on Cryptology in India (2019).</li>
+							<li>D. Bera. Amplitude amplification for operator identification and randomized classes. In International Computing and Combinatorics Conference (COCOON 2018).</li>
+							<li>D. Bera. Detection and Diagnosis of Single Faults in Quantum Circuits. In IEEE Transactions on Computer-Aided Design of Integrated Circuits and Systems, vol. 37, no. 3. (2018)</li>
+						</ul>
+						</div>
+				</div>
+			</article>
+
+		<!-- Contact -->
+			<article id="contact" class="wrapper style4">
+				<div class="container medium">
+					<header>
+						<h2>Contact</h2>
+						<p>Lab B-513, <br>Research and Development Building, <br>Indraprastha Institute of Information Technology - Delhi, <br>Okhla Industrial Area Phase III, New Delhi - 110020.</p>
+						<br>
+						<p>Email : braqiiit@gmail.com</p>
+					</header>
+					<div class="row">
+						<!-- <div class="col-12">
+							<form method="post" action="#">
+								<div class="row">
+									<div class="col-6 col-12-small">
+										<input type="text" name="name" id="name" placeholder="Name" />
+									</div>
+									<div class="col-6 col-12-small">
+										<input type="text" name="email" id="email" placeholder="Email" />
+									</div>
+									<div class="col-12">
+										<input type="text" name="subject" id="subject" placeholder="Subject" />
+									</div>
+									<div class="col-12">
+										<textarea name="message" id="message" placeholder="Message"></textarea>
+									</div>
+									<div class="col-12">
+										<ul class="actions">
+											<li><input type="submit" value="Send Message" /></li>
+											<li><input type="reset" value="Clear Form" class="alt" /></li>
+										</ul>
+									</div>
+								</div>
+							</form>
+						</div> -->
+						<div class="col-12">
+							<hr />
+							<h3>Find us on ...</h3>
+							<ul class="social">
+								<li><a href="https://twitter.com/BQiiit" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+								<!-- <li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+								<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
+								<li><a href="#" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+								<li><a href="#" class="icon brands fa-tumblr"><span class="label">Tumblr</span></a></li>
+								<li><a href="#" class="icon brands fa-google-plus"><span class="label">Google+</span></a></li> -->
+								<li><a href="https://github.com/braqiiit" class="icon brands fa-github"><span class="label">Github</span></a></li>
+								<!--
+								<li><a href="#" class="icon solid fa-rss"><span>RSS</span></a></li>
+								<li><a href="#" class="icon brands fa-instagram"><span>Instagram</span></a></li>
+								<li><a href="#" class="icon brands fa-foursquare"><span>Foursquare</span></a></li>
+								<li><a href="#" class="icon brands fa-skype"><span>Skype</span></a></li>
+								<li><a href="#" class="icon brands fa-soundcloud"><span>Soundcloud</span></a></li>
+								<li><a href="#" class="icon brands fa-youtube"><span>YouTube</span></a></li>
+								<li><a href="#" class="icon brands fa-blogger"><span>Blogger</span></a></li>
+								<li><a href="#" class="icon brands fa-flickr"><span>Flickr</span></a></li>
+								<li><a href="#" class="icon brands fa-vimeo"><span>Vimeo</span></a></li>
+								-->
+							</ul>
+							<hr />
+						</div>
+					</div>
+					<footer>
+						<ul id="copyright">
+							<li>Copyright &copy; BraQIIIT 2022. All rights reserved.</li>
+						</ul>
+					</footer>
+				</div>
+			</article>
+
+		<!-- Scripts -->
+			<script src="assets/js/jquery.min.js"></script>
+			<script src="assets/js/jquery.scrolly.min.js"></script>
+			<script src="assets/js/browser.min.js"></script>
+			<script src="assets/js/breakpoints.min.js"></script>
+			<script src="assets/js/util.js"></script>
+			<script src="assets/js/main.js"></script>
+
+	</body>
 </html>
