Added Sagnik's quantum boosting paper
Added Sagnik's quantum boosting paper to the list of publications. Also changed the title of a previous paper to "HighDist Framework: Algorithms and Applications". Made some minor changes.

--- a/index.html
+++ b/index.html
@@ -79,11 +79,12 @@
 					</header>
 					<div class="row">
 						<ul class="papers">
-							<li>D. Bera, and Tharrmashastha SAPV. Space efficient quantum algorithms for mode, min-entropy and k-distinctness. arXiv preprint. <a href="https://arxiv.org/abs/2103.09033">arXiv:2103.09033</a>(2021).</li>
+							<li>D. Bera and S. Chatterjee. Quantum Boosting using Domain-Partitioning Hypotheses. arXiv preprint <a href="https://arxiv.org/abs/2110.12793">arXiv:2110.12793</a>(2021).</li>
+							<li>D. Bera, and Tharrmashastha SAPV. HighDist Framework: Algorithms and Applications. arXiv preprint. <a href="https://arxiv.org/abs/2103.09033">arXiv:2103.09033</a>(2021).</li>
 							<li>D. Bera and Tharrmashastha SAPV. Quantum and Randomised Algorithms for Non-linearity Estimation. ACM Transactions on Quantum Computing (2021).</li>
 							<li>D. Bera and S. Chatterjee. Applying the Quantum Alternating Operator Ansatz to the Graph Matching Problem. AQIS 2020.</li>
 							<li>D. Bera and Tharrmashastha SAPV. Error reduction of quantum algorithms. Physical Review A 100.012331 (2019).</li>
-							<li>D. Bera, S. Maitra, and Tharrmashastha SAPV. Efficient quantum algorithms related to autocorrelation spectrum. In International Conference on Cryptology in India (2019).</li>
+							<li>D. Bera, S. Maitra, and Tharrmashastha SAPV. Efficient quantum algorithms related to autocorrelation spectrum. In International Conference on Cryptology in India (INDOCRYPT 2019).</li>
 							<li>D. Bera. Amplitude amplification for operator identification and randomized classes. In International Computing and Combinatorics Conference (COCOON 2018).</li>
 							<li>D. Bera. Detection and Diagnosis of Single Faults in Quantum Circuits. In IEEE Transactions on Computer-Aided Design of Integrated Circuits and Systems, vol. 37, no. 3. (2018)</li>
 						</ul>
