--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 					<li><a href="#top">Home</a></li>
 					<li><a href="#team">Team</a></li>
 					<li><a href="#publications">Publications</a></li>
+					<li><a href="#resources">Resources</a></li>
 					<li><a href="#contact">Contact</a></li>
 				</ul>
 			</nav>
@@ -91,6 +92,17 @@
 						</div>
 				</div>
 			</article>
+		
+		<!-- Resources -->
+		<article id="resources" class="wrapper style5">
+			<div class="container">
+				<header>
+					<h2>Useful Resources</h2>
+				</header>
+					<embed class="embed" src="images/resources_for_qc.pdf" width="1024px" height="500px"
+					type="application/pdf" style="max-width: 95%;">
+			</div>
+		</article>
 
 		<!-- Contact -->
 			<article id="contact" class="wrapper style4">
