--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 						<li><a href="#top">Home</a></li>
 						<li><a href="#team">Team</a></li>
 						<li><a href="#publications">Publications</a></li>
-						<!-- <li><a href="events.html">Events</a></li> -->
+						<li><a href="events.html">Events</a></li>
 						<li><a href="#resources">Resources</a></li>
 						<li><a href="#contact">Contact</a></li>
 					</ul>
