Modifications in BSoC Mentors

--- a/events.html
+++ b/events.html
@@ -58,6 +58,9 @@
 							<span>
 								<ul>
 									<li>
+										The candidate must be a student of IIIT-D.
+									</li>
+									<li>
 										Interest in exploring quantum computing.
 									</li>
 									<li>
@@ -120,9 +123,6 @@
 							<span class="mentors">
 								<ul>
 									<li>
-										Debajyoti Bera
-									</li>
-									<li>
 										Sagnik Chatterjee
 									</li>
 									<li>
@@ -130,6 +130,10 @@
 									</li>
 									<li>
 										Bhagesh Gaur
+									</li>
+									<h4>(Advised by)</h4>
+									<li>
+										Dr.Debajyoti Bera
 									</li>
 								</ul>
 							</span>
