Closed registration and modified BSoC timeline.
Registrations form closed. Modified the program timeline.

--- a/events.html
+++ b/events.html
@@ -40,7 +40,10 @@
 					<p>
 					We are hosting the 2022 BraQIIIT Summer of Code between 03 June 2022 and 31 July 2022. 
 					The program aims to introduce students to Qiskit and get a hands-on learning of quantum computing and its nuances.
-					During the BSoC, the candidates will undergo a two week bootstrapping period with lectures on introduction to basic and advanced Qiskit. For the remainder of BSoC, the students will be divided into teams and be involved in various projects revolving around implemeting various quantum algorithms and testing them in simulators and actual quantum computers. This will be done under the mentorship of Qiskit advocates and the members of BraQIIIT. If you are interested please fill the Google form <a href="https://docs.google.com/forms/d/e/1FAIpQLSdoFpJXmD3tHu5GyY_OGCVm3J1KbahyTvTc37lB9zVPFfcxwA/viewform?usp=sf_link">here</a>.</p>
+					During the BSoC, the candidates will undergo a two week bootstrapping period with lectures on introduction to basic and advanced Qiskit. For the remainder of BSoC, the students will be divided into teams and be involved in various projects revolving around implemeting various quantum algorithms and testing them in simulators and actual quantum computers. This will be done under the mentorship of Qiskit advocates and the members of BraQIIIT. 
+					<br>
+					<br>
+					<b>Thank you all for the overwhelming response. The registration for the event is now closed.</b>
 				</div>
 			</div>
 		</article>
@@ -84,11 +87,11 @@
 									</tr>
 									<br>
 									<tr>
-										<td>03 Jun - 15 Jun</td>
+										<td>06 Jun - 18 Jun</td>
 										<td>Introduction to Qiskit</td>
 									  </tr>
 									  <tr>
-										<td>15 Jun - 07 Jul</td>
+										<td>18 Jun - 07 Jul</td>
 										<td>Phase I</td>
 									  </tr>
 									  <tr>
