Added link for Julia project

--- a/events.html
+++ b/events.html
@@ -149,7 +149,8 @@
 							<span>
 								<ul>
 									<li>
-										Designing a 50 qubit quantum simulator using Julia.
+										Designing a 50 qubit quantum simulator using Julia. <br>
+										<a href="https://github.com/QuantumBFS/Yao.jl">https://github.com/QuantumBFS/Yao.jl</a>
 									</li>
 									<li>
 										Implementing Shor's factoring algorithm from scratch to factor  large number n>81. <br>
