--- a/index.html
+++ b/index.html
@@ -126,6 +126,10 @@
 										<a href="https://quantumalgorithmzoo.org/">Quantum Algorithm Zoo</a> <br>
 										An assortment of important quantum algorithms, all in one place.
 									</li>
+									<li>
+										<a href="https://quantumalgorithms.org/">Quantum algorithms for data analysis</a> <br/>
+										A collection of the state-of-the-art quantum algorithms.
+									</li>
 								</ul>
 							</span>
 						</section>
