--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 										An assortment of important quantum algorithms, all in one place.
 									</li>
 									<li>
-										<a href="https://quantumalgorithms.org/">Quantum algorithms for data analysis</a> <br/>
+										<a href="https://quantumalgorithms.org/">Quantum Algorithms for Data Analysis</a> <br/>
 										A collection of the state-of-the-art quantum algorithms.
 									</li>
 								</ul>
