Added interns, projects and made modifications to the socials
Added masters interns and student interns under the students section. Added a new projects tab. Pushed the socials icons also to the top right.

--- a/events.html
+++ b/events.html
@@ -116,9 +116,6 @@
 
 		<article id="bsocmentors" class="wrapper style5">
 			<div class="container">
-				<!-- <header>
-					<h2>Useful Resources</h2>
-				</header> -->
 				<div class="row aln-left">
 					<div class="col-6 col-6-medium col-12-small">
 						<section>
@@ -168,6 +165,47 @@
 							</span>
 						</section>
 					</div>
+				</div>
+			</div>
+		</article>
+
+		<article id="selectteams" class="wrapper style3">
+			<div class="container">
+				<header>
+					<h2>Selected Students</h2>
+				</header>
+					<div class="row aln-center">
+						<div class="col-4 col-6-medium col-12-small">
+							<section class="box style1">
+								<h3>Team 1</h3>
+								<ul>
+									<li>Akshansh Jaiswal</li>
+									<li>Jaskaran Singh</li>
+									<li>Pratyush Kumar</li>
+								</ul>
+							</section>
+						</div>
+						<div class="col-4 col-6-medium col-12-small">
+							<section class="box style1">
+								<h3>Team 2</h3>
+								<ul>
+									<li>Anindya Prithvi</li>
+									<li>Apoorva Arya</li>
+								</ul>
+							</section>
+						</div>
+						<div class="col-4 col-6-medium col-12-small">
+							<section class="box style1">
+								<h3>Team 1</h3>
+								<ul>
+									<li>Subhanshu Bansal</li>
+									<li>Vignesh Goswami</li>
+								</ul>
+							</section>
+						</div>
+					</div>
+				</div>
+			</article>
 				</div>
 			</div>
 		</article>
