--- a/index.html
+++ b/index.html
@@ -18,15 +18,24 @@
 						<span class="bar"></span>
 					</a>
 				</div>
-				<div class="navbar-links">
-					<ul class="container">
-						<li><a href="#top">Home</a></li>
-						<li><a href="#team">Team</a></li>
-						<li><a href="#publications">Publications</a></li>
-						<li><a href="events.html">Events</a></li>
-						<li><a href="#resources">Resources</a></li>
-						<li><a href="#contact">Contact</a></li>
-					</ul>
+				<div class="navbar-links row aln-center">
+					<div>
+						<ul class="container">
+							<li><a href="#top">Home</a></li>
+							<li><a href="#team">Team</a></li>
+							<li><a href="#publications">Publications</a></li>
+							<li><a href="#projects">Projects</a></li>
+							<li><a href="events.html">Events</a></li>
+							<li><a href="#resources">Resources</a></li>
+							<li><a href="#contact">Contact</a></li>
+						</ul>
+					</div>
+					<div>
+						<ul>
+							<li><a href="https://twitter.com/BQiiit" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+							<li><a href="https://github.com/braqiiit" class="icon brands fa-github"><span class="label">Github</span></a></li>
+						</ul>
+					</div>
 				</div>
 			</nav>
 
@@ -69,7 +78,7 @@
 							<section class="box style1">
 								<span class="image fit"><a href="http://chatsagnik.com/"><img src="images/sagnik.png" alt="" /></a></span>
 								<h3>Sagnik Chatterjee</h3>
-								<h4>3<sup>rd</sup> Year</h4>
+								<h4>4<sup>th</sup> Year</h4>
 							</section>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
@@ -77,7 +86,27 @@
 								<span class="image fit"><a href="https://sites.google.com/iiitd.ac.in/
 									tharrma"><img src="images/tharrma.jpg" alt="" /></a></span>
 								<h3>Tharrmashastha SAPV </h3>
-								<h4>3<sup>rd</sup> Year</h4>
+								<h4>4<sup>th</sup> Year</h4>
+							</section>
+						</div>
+					</div>
+					<div class="row aln-center">
+						<div class="col-4 col-6-medium col-12-small">
+							<h2>Masters Students</h2>
+							<section class="box style2">
+								<ul class="students">
+									<li>Sanchita Saha</li>
+								</ul>
+							</section>
+						</div>
+						<div class="col-4 col-6-medium col-12-small">
+							<h2>Student Interns</h2>
+							<section class="box style2">
+								<ul class="students">
+									<li>Rohit Beriwal</li>
+									<li>Harsh Rathee</li>
+									<li>Ayushi Dubal</li>
+								</ul>
 							</section>
 						</div>
 					</div>
@@ -85,7 +114,7 @@
 			</article>
 
 		<!-- Publications -->
-			<article id="publications" class="wrapper style3">
+			<article id="publications" class="wrapper style1">
 				<div class="container">
 					<header>
 						<h2>Publications</h2>
@@ -105,8 +134,54 @@
 				</div>
 			</article>
 		
+		<!-- Projects -->
+		<article id="projects" class="wrapper style2">
+			<div class="container">
+				<header>
+					<h2>Projects</h2>
+				</header>
+				<div class="row aln-left">
+					<div class="col-6 col-6-medium col-12-small">
+						<section>
+							<span>
+								<ul>
+									<li><a href="https://github.com/san-saha/Quantum-ChaCha">Implementing ChaCha Stream Cipher in a Quantum Simulator.</a>
+										<br>An attempt at implemeting the ChaCha stream cipher in a quantum simulator.
+									</li>
+									<li>
+										<a href="https://github.com/braqiiit/QRealBoost">Implementation of the QRealBoost Algorithm.</a><br> 
+										Implemention of the QRealBoost algorithm introduced in Quantum Boosting using Domain-Partitioning Hypotheses (<a href="https://arxiv.org/abs/2110.12793">arXiv:2110.12793</a>).</li>
+									</li>
+									<li>
+										<a href="https://github.com/debajyotibera/nonlinearity">Quantum and Classical Nonlinearity Estimation Techniques.</a> <br> 
+										A C language implementation of classical and quantum tools for computing the non-linearity of a given Boolean function.
+									</li>
+								</ul>
+							</span>
+						</section>
+					</div>
+					<div class="col-6 col-6-medium col-12-small no-sep-medium">
+						<section>
+							<span>
+								<ul>
+									<li>
+										<a href="https://github.com/braqiiit/QuantumStatePreparation">Implementation of Black-Box Quantum State Preparation without Arithmetic.</a> <br> 
+										Implementation of the quantum state preparation method intruduced in Black-Box Quantum State Preparation without Arithmetic (<a href="https://journals.aps.org/prl/abstract/10.1103/PhysRevLett.122.020502">PhysRevLett.122.020502.</a>)
+									</li>
+									<li>
+										<a href="https://github.com/TheGupta2012/QPE-Algorithms">Implementing Quantum Phase Estimation Algorithms.</a> <br> 
+										A library containing some basic and novel Quantum Phase Estimation algorithms.
+									</li>
+								</ul>
+							</span>
+						</section>
+					</div>
+				</div>
+			</div>
+		</article>
+	
 		<!-- Resources -->
-		<article id="resources" class="wrapper style5">
+		<article id="resources" class="wrapper style1">
 			<div class="container">
 				<header>
 					<h2>Useful Resources</h2>
@@ -141,7 +216,7 @@
 										Basic introduction to QC from a more computer science perspective.
 									</li>
 									<li>
-										<a href="http://www.thomaswong.net/introduction-to-classical-and-quantum-computing-1e2p.pdf">Introduction to Classical and Quantum Computing by Thomas Wong</a>
+										<a href="http://www.thomaswong.net/introduction-to-classical-and-quantum-computing-1e3p.pdf">Introduction to Classical and Quantum Computing by Thomas Wong</a>
 										<br>
 										Focuses on the basics of QC, tools like linear algebra and how to connect them.
 									</li>
